data/all_generated_tests/raw_wast_tests/call_indirect_StackCorruption_4038.wast
;; 7. **Recursive Calls with Mismatched Returns**:    - Implement a sequence of recursive `call_indirect` where the return type does not match the expected function signature.    - Constraint Check: Verify if returns are properly managed and validated during recursion.    - Stack Corruption Relation: Incorrect return types can lead to incorrect values being left on the stack, resulting in subsequent calls failing.

(assert_invalid
  (module
    (type $t1 (func (result i32)))
    (type $t2 (func))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func $f (type $t1) (i32.const 42))
    (func $g (type $t2) (call_indirect (type 0) (i32.const 0)))
    (start $g)
  )
  "type mismatch"
)